--- a/public/style.css
+++ b/public/style.css
@@ -1,52 +1,100 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;500;600;700&display=swap");
 
-body{
-    margin: 0;
-    overflow: hidden;
-    user-select: none;
+body {
+  margin: 0;
+  overflow: hidden;
+  user-select: none;
 }
 
-.title-box{
-    position: absolute;
-    left: 0%;
-    top: 0%;
-    width: 50%;
-    height: auto;
-    transform: translateY(50%);
-    transition: top 0.25s;
+.title-box {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  width: 50%;
+  height: auto;
+  transform: translateY(50%);
+  transition: top 0.25s;
 }
 
 .title {
-    color:whitesmoke;
-    padding-left: 4rem;
+  color: whitesmoke;
+  padding-left: 4rem;
 }
 
 .title h1 {
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-    font-size: 5rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 5rem;
 }
 
 .launch {
-    cursor: pointer;
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 3rem;
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    text-transform: uppercase;
-    color: whitesmoke;
-    background: rgb(0, 114, 255);
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 3rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: whitesmoke;
+  background: rgb(0, 114, 255);
 }
 
-.backBtn{
-    color: black;
-    position: absolute;
-    left: -50px;
-    transition: left 0.25s;
-    padding: 8px 10px 6px 8px;
-    background: #f5f5f545;
-    border-radius: 0 25px 25px 0;
-    margin-top: 20px;
-    cursor: pointer;
+.backBtn {
+  color: black;
+  position: absolute;
+  left: -50px;
+  transition: left 0.25s;
+  padding: 8px 10px 6px 8px;
+  background: #f5f5f545;
+  border-radius: 0 25px 25px 0;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+}
+
+.git,
+.info {
+  height: 25px;
+  padding: 4px 8px;
+  cursor: pointer;
+}
+
+.info:hover + .info-box {
+  bottom: 4px !important;
+}
+
+.info-box {
+  position: absolute !important;
+  color: white;
+  border: 1px solid whitesmoke;
+  border-radius: 8px;
+  bottom: -80px;
+  width: 140px;
+  height: auto;
+  right: 94px;
+  text-align: center;
+  font-family: "POPPINS";
+  font-size: 16px;
+  padding: 4px 8px;
+  transition: bottom 0.25s;
+}
+
+.score {
+  position: absolute !important;
+  top: 0px;
+  right: 0px;
+  color: white;
+  font-family: "Poppins";
+  padding: 4px 8px;
+  font-size: 18px;
+}
+
+.value {
+  font-weight: 500;
+  color: greenyellow;
 }
