--- a/public/style.css
+++ b/public/style.css
@@ -27,7 +27,7 @@ body {
   font-size: 5rem;
 }
 
-.launch {
+.launch, .back {
   cursor: pointer;
   padding: 0.5rem 1rem;
   border: none;
@@ -97,4 +97,20 @@ body {
 .value {
   font-weight: 500;
   color: greenyellow;
+}
+
+.complete {
+  position: absolute;
+  top: -100%;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  color: whitesmoke;
+  font-family: 'Poppins';
+  width: 100%;
+}
+
+.complete h1 {
+  font-size: 5rem;
+  margin-bottom: 1rem;
 }
